# tree-sitter-r

./: .Rprofile  .clang-format  .editorconfig  .gitattributes  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-text.html  LICENSE.html  Makefile  Package.swift  README.md  authors.html  authors.md  binding.gyp  go.mod  grammar.js  index.html  justfile  llms.txt  package-lock.json  package.json  pkgdown.yml  pyproject.toml  search.json  setup.py  sitemap.xml  test.mjs  tree-sitter.json
.github/workflows/: R-CMD-check.yaml  build.yaml  check-no-suggests.yaml  ci.yaml  format-suggest.yaml  fuzz.yaml  package-crates.yaml  package-npm.yaml  pkgdown.yaml  publish.yaml  release.yaml  temporary.yaml  test-coverage.yaml
bindings/c/: tree-sitter-r.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_r/: __init__.py  __init__.pyi  binding.c
bindings/r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  air.toml  bootstrap.R  cran-comments.md
bindings/r/.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  test-coverage.yaml
bindings/r/R/: abi.R  binding.R  import-standalone-language.R  language.R  treesitter.r-package.R  treesitterr-package.R  update.R  zzz.R
bindings/r/man/: abi.Rd  language.Rd  treesitter.r-package.Rd  treesitterr-package.Rd
bindings/r/pkgdown/assets/: test.html
bindings/r/pkgdown/assets/playground/: index.html
bindings/r/pkgdown/assets/playground/assets/: playground.css  playground.js
bindings/r/src/: Makevars  binding.c  init.c  scanner.c
bindings/r/tests/: testthat.R
bindings/r/tests/testthat/: helper-parser.R  helper-print.R  helper-query-describe.R  helper-query-testthat.R  helper-query.R  helper-snapshot.R  test-abi.R  test-calls.R  test-comments.R  test-control-flow.R  test-delimiter.R  test-extract.R  test-functions.R  test-literals.R  test-miscellaneous.R  test-missing.R  test-namespace.R  test-newlines.R  test-operators.R  test-query-describe.R  test-query-testthat.R  test-stack-crash.R  test-start.R  test-strings.R  test-unclosed.R  test-unicode.R
bindings/r/tests/testthat/_snaps/: calls.md  control-flow.md  delimiter.md  extract.md  functions.md  literals.md  miscellaneous.md  missing.md  namespace.md  newlines.md  operators.md  stack-crash.md  strings.md  unclosed.md  unicode.md
bindings/r/tests/testthat/fixtures/: describe.scm  test_that.scm
bindings/r/tests/testthat/references/: calls.R  control-flow.R  delimiter.R  extract.R  functions.R  literals.R  miscellaneous.R  missing.R  namespace.R  newlines.R  operators.R  strings.R  unclosed.R  unicode.R
bindings/r/tools/: abi-template.R  abi-update.R  abi.R
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterR/: r.h
bindings/swift/TreeSitterRTests/: TreeSitterRTests.swift
dev/: LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  authors.html  authors.md  index.html  index.md  pkgdown.yml  search.json  sitemap.xml
dev/news/: index.html  index.md
dev/reference/: index.html  index.md  language.html  language.md  treesitter.r-package.html
news/: index.html  index.md
queries/: highlights.scm  locals.scm  tags.scm
reference/: index.html  language.html  treesitter.r-package.html  treesitter.r-package.md
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: errors.txt  expressions-errors.txt  expressions.txt  literals-errors.txt  literals.txt  stack-crash.txt
test/highlight/: constant.R  control.R  functions.R  literals.R  namespace.R  operators.R  punctuation.R  variables.R
test/tags/: calls.R  function-definitions.R
