[package]
name = "tree-sitter-r"
description = "R grammar for the tree-sitter parsing library"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "R"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/r-lib/tree-sitter-r"
authors = [
    "Kevin Ushey <kevin@posit.co>",
    "Jim Hester <james.f.hester@gmail.com>",
    "Davis Vaughan <davis@posit.co>",
]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.92"
