[package]
name = "tree-sitter-r"
description = "R grammar for tree-sitter"
version = "1.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "r"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/r-lib/tree-sitter-r"
authors = [
    "Kevin Ushey <kevin@posit.co>",
    "Jim Hester <james.f.hester@gmail.com>",
    "Davis Vaughan <davis@posit.co>",
]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
