[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-r"
description = "R grammar for tree-sitter"
version = "1.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "r"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Kevin Ushey", email = "kevin@posit.co" },
  { name = "Jim Hester", email = "james.f.hester@gmail.com" },
  { name = "Davis Vaughan", email = "davis@posit.co" },
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/r-lib/tree-sitter-r"

[project.optional-dependencies]
core = ["tree-sitter~=0.23"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
